test/langtools/tools/javac/datum/PrimaryConstructorMustBePublic.out
PrimaryConstructorMustBePublic.java:8:5: compiler.err.method.must.be.public: <init>
1 error
